@@ -12,6 +12,7 @@ Version 0.4q2
 * Felines now tend to come in bigger groups than before
 * Miranda has had a bit of a revamp of her talk menu, plus a bunch of typos fixed. Some new topics
 * Catboy and Centauress should give significantly higher xp rewards now
+* Clarified a section of the Search for the Scepter quest log, pointing you to where to go
 
 --------------------------------------------
              PREVIOUS VERSIONS
